Remade navigation in app: - LandingActivity.kt hosts fragmentContainer with landing_nav.xml graph - UserActivity.kt hosts fragmentContainer with user_nav.xml graph - ParamedicActivity.kt hosts fragmentContainer with paramedic_nav.xml graph
Added OpenStreetMaps mapView with one marker and user location

--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".LandingActivity">
 
 
     <androidx.fragment.app.FragmentContainerView
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/app_nav"
+        app:navGraph="@navigation/landing_nav"
+        tools:layout="@layout/fragment_splash_screen"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
