--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -158,16 +158,28 @@
                     android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <Button
+                android:id="@+id/collect_data_button"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="5dp"
+                android:text="Want to know why do we need this data?"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="@+id/birthday_field"
+                app:layout_constraintStart_toStartOf="@+id/birthday_field"
+                app:layout_constraintTop_toBottomOf="@+id/birthday_field" />
+
             <com.google.android.material.switchmaterial.SwitchMaterial
                 android:id="@+id/switchMaterial"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="0dp"
                 android:checked="false"
                 android:text="@string/register_hint"
                 app:layout_constraintEnd_toEndOf="@+id/birthday_field"
                 app:layout_constraintStart_toStartOf="@+id/birthday_field"
-                app:layout_constraintTop_toBottomOf="@+id/birthday_field" />
+                app:layout_constraintTop_toBottomOf="@+id/collect_data_button" />
 
             <Button
                 android:id="@+id/register_button"
