--- a/app/src/main/res/navigation/paramedic_nav.xml
+++ b/app/src/main/res/navigation/paramedic_nav.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/paramedic_nav"
     app:startDestination="@id/paramedicScreen">
 
     <fragment
         android:id="@+id/paramedicScreen"
         android:name="com.example.mobileclient.fragments.ParamedicScreen"
-        android:label="ParamedicScreen" />
+        android:label="ParamedicScreen" >
+        <action
+            android:id="@+id/action_paramedicScreen_to_paramedicCallForSupport2"
+            app:destination="@id/paramedicCallForSupport2" />
+    </fragment>
+    <fragment
+        android:id="@+id/paramedicCallForSupport2"
+        android:name="com.example.mobileclient.ParamedicCallForSupport"
+        android:label="fragment_paramedic_call_for_support"
+        tools:layout="@layout/fragment_paramedic_call_for_support" />
 </navigation>
