--- a/app/src/main/res/layout/list_item_diseases.xml
+++ b/app/src/main/res/layout/list_item_diseases.xml
@@ -2,7 +2,6 @@
 <TableLayout android:layout_height="wrap_content"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:shrinkColumns="*"
     android:stretchColumns="*">
     <TableRow
@@ -11,6 +10,6 @@
         <TextView
             android:layout_column="0"
             android:id="@+id/disease_name"
-            android:textSize="18dp"/>
+            android:textSize="18sp"/>
     </TableRow>
 </TableLayout>
