--- a/app/src/main/res/menu/guest_navigation_drawer.xml
+++ b/app/src/main/res/menu/guest_navigation_drawer.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item android:title="@string/sign_up"  android:icon="@drawable/ic_baseline_check_24"/>
         <item android:title="@string/log_in"  android:icon="@drawable/ic_sharp_login_24"/>
-        <item android:title="Map" android:icon="@drawable/ic_map_24"/>
+        <item android:title="@string/GuestNavigation_Map" android:icon="@drawable/ic_map_24"/>
     </group>
 </menu>
