--- a/app/src/main/res/navigation/paramedic_nav.xml
+++ b/app/src/main/res/navigation/paramedic_nav.xml
@@ -12,10 +12,18 @@
         <action
             android:id="@+id/action_paramedicScreen_to_paramedicCallForSupport2"
             app:destination="@id/paramedicCallForSupport2" />
+        <action
+            android:id="@+id/action_paramedicScreen_to_addVictimInfo"
+            app:destination="@id/addVictimInfo" />
     </fragment>
     <fragment
         android:id="@+id/paramedicCallForSupport2"
         android:name="com.example.mobileclient.ParamedicCallForSupport"
         android:label="fragment_paramedic_call_for_support"
         tools:layout="@layout/fragment_paramedic_call_for_support" />
+    <fragment
+        android:id="@+id/addVictimInfo"
+        android:name="com.example.mobileclient.AddVictimInfo"
+        android:label="fragment_add_victim_info"
+        tools:layout="@layout/fragment_add_victim_info" />
 </navigation>
