--- a/app/src/main/res/menu/paramedic_navigation_drawer.xml
+++ b/app/src/main/res/menu/paramedic_navigation_drawer.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single" >
         <item android:title="Map" android:icon="@drawable/ic_map_24"/>
+        <item android:title="Break" android:icon="@drawable/ic_baseline_list_alt_24"/>
         <item android:title="Log out" android:icon="@drawable/ic_sharp_logout_24" />
     </group>
 </menu>
