--- a/app/src/main/res/layout/tutorial_view_item.xml
+++ b/app/src/main/res/layout/tutorial_view_item.xml
@@ -30,7 +30,7 @@
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="8dp"
         android:checkable="true"
         android:clickable="true"
         android:focusable="true"
@@ -44,8 +44,8 @@
 
             <ImageView
                 android:id="@+id/thumbnail"
-                android:layout_width="match_parent"
-                android:layout_height="194dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:adjustViewBounds="true"
                 android:background="@color/black"
                 android:scaleType="centerCrop"
