--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="mustard">#d69a23</color>
     <color name="light_grey">#4c4c4c</color>
+    <color name="red">#CE2029</color>
 </resources>
